web/static/css/style.css
body {
    --primary-color:#f2f2f2;
    --secondary-color:#d5d5d5;
    --third-color:#ffffff;
    --fourth-color:#d2d2d2;
    --text-color:black;
    --secondary-text-color:#313131;
    --font:Helvetica, Arial, sans-serif;
    background:var(--primary-color);
    color:var(--text-color);
    font-family:var(--font);
    height:100%;
    overflow:hidden;
}

@media (prefers-color-scheme: dark) {
    body {
        --primary-color:#282828;
        --secondary-color:#353535;
        --third-color:#515151;
        --fourth-color:#6c6c6c;
        --text-color:#d3d3d3;
        --secondary-text-color:#f0f0f0;
    }
}

@media (max-width:430px) {
    .mid p {
        display:none;
    }

    .footer .un {
        display:none;
    }
    
    .mid .small-disp {
        display:block !important;
    }

    .mid .wider-disp {
        display:none;
    }

    .question {
        margin-bottom: 20px !important;
    }

    .question h2, .question p {
        margin-bottom:5px !important;
    }
}

@media (min-width:430px) {
    .mid .small-disp {
        display:none;
    }

    .mid .wider-disp {
        display:block !important;
    }
}

input {
    background:var(--third-color);
    color:var(--text-color);
    border:0;
    border-radius:2px;
}

input:focus, .subBox:hover {
    color:var(--secondary-text-color);
    background:var(--fourth-color);
}

a {
    color:var(--secondary-text-color);
    text-decoration:none;
}

a:hover, a:focus {
    text-decoration:underline;
    text-decoration-color:var(--secondary-text-color);
}

.textBox {
    width:200px;
    height:20px;
    outline:none;
    font-family:var(--font);
}

.mid .textBox {
    width:70% !important;
    min-width:200px;
    height:35px !important;
    padding:1%;
}

.subBox {
    cursor:pointer;
    height:20px;
    padding-left:5px;
    padding-right:5px;
    vertical-align:center;
    font-family:var(--font);
}

.mid {
    position:absolute;
    left:50%;
    top:50%;
    min-width:410px;
    -webkit-transform:translate(-50%, -50%);
    transform:translate(-50%, -50%);
    text-align:center;
}

.mid .subBox {
    height:35px !important;
}

.mid h1 {
    margin-top:0;
    margin-bottom:10px;
}

.footer {
    bottom:0;
    left:0;
    position:fixed;
    z-index:1;
    width:100%;
    height:40px;
    text-align:center;
}

.question {
    margin-top:1%;
    margin-bottom:1%;
}

.question h2, .question p {
    margin:0 !important;
}

